# sealed-secrets-metadata-webhook

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  main.py  pyproject.toml
.github/workflows/: ci.yml  version-maintenance.yml
sealed_secrets_mdhook/: __init__.py  app.py
test/: config.json  test_mutation.py
